# find-novel

./: .gitignore  LICENSE  README.md  RELEASING.md  install_skills.sh  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/research/: fanqie-probe.md  qimao-sign.md
novel_crawler/: __init__.py  __main__.py  base.py  cache.py  cli.py  config.py  db.py  dedup.py  diagnose.py  download.py  engine.py  interactive.py  log.py  preview.py  proxy.py  registry.py  tracker.py  web.py
novel_crawler/sites/: __init__.py  _fanqie_font_map.py  _qimao_appapi.py  faloo.py  fanqie.py  min_yuan.py  qidian.py  qimao.py  yanqing92.py  zongheng.py
skills/find-novel/: SKILL.md
tests/: conftest.py  test_base.py  test_cache.py  test_db.py  test_dedup.py  test_diagnose.py  test_engine.py  test_preview.py  test_qimao_appapi.py  test_registry.py  test_sites_fanqie.py  test_sites_parse.py  test_tracker.py  test_web.py
tests/fixtures/: faloo_catalog.html  faloo_content.html  min_yuan_catalog.html  min_yuan_content.html  qidian_catalog.html  qidian_content.html  qimao_catalog.html  qimao_content.html  yanqing92_catalog.html  yanqing92_content.html  zongheng_catalog.html  zongheng_content.html
