[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "novel-crawler"
dynamic = ["version"]
description = "多站小说爬虫 + 自然语言找书（Claude 推荐 skill）"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "ShiXinChao"}]
keywords = ["novel", "crawler", "fiction", "chinese-novel", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Text Processing",
]
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "lxml>=4.9",
]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/RoarDay/find-novel"
Repository = "https://github.com/RoarDay/find-novel"
Issues = "https://github.com/RoarDay/find-novel/issues"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.10"]
# 全本下载（七猫 App API zip + AES 解密）才需要；核心功能零新依赖
qimao = ["pycryptodome>=3.20"]

[project.scripts]
novel-crawler = "novel_crawler.cli:main"

[tool.setuptools.packages.find]
include = ["novel_crawler*"]

[tool.setuptools.dynamic]
version = {attr = "novel_crawler.__version__"}

[tool.ruff]
line-length = 100
exclude = ["novels", ".trellis", ".claude", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
exclude = ["novels/"]

# ponytail: sites/ 解析器对 bs4 多值属性宽松，core 清就够了
[[tool.mypy.overrides]]
module = "novel_crawler.sites.*"
ignore_errors = true
